# sagemaker-invoker

./: .env.sample  .gitignore  Dockerfile  Makefile  Pipfile  README.md  lambda_function.py  lambda_function_test.py  pyproject.toml
src/: types.py
test/: lambda_function_test.py
